[workspace]
resolver = "2"
members = [
    "leviathan-cli",
    "leviathan-core",
    "leviathan-net",
    "leviathan-node",
    "leviathan-control",
    "leviathan-scheduler",
    "leviathan-storage",
    "leviathan-raft",
    "leviathan-runtime",
    "leviathan-mesh",
    "leviathan-metrics",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Leviathan Contributors"]
license = "MIT"
repository = "https://github.com/DevSars24/leviathan"

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# gRPC + Protobuf
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
prost-build = "0.13"

# Byte buffers
bytes = "1"

# Memory-mapped files
memmap2 = "0.9"

# Testing utilities
tempfile = "3"

# --- Phase 5: Raft consensus ---
rand = "0.8"

# --- Phase 6: Container runtime (Linux-only syscalls gated at crate level) ---
nix = { version = "0.29", features = ["sched", "mount", "signal", "net", "fs"] }
libc = "0.2"

# --- Phase 7: Service mesh + metrics ---
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
rcgen = "0.13"
webpki-roots = "0.26"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
prometheus-client = "0.22"
http = "1"
