[package]
name = "leviathan-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI entry point for the Leviathan container orchestration platform"

[[bin]]
name = "leviathan"
path = "src/main.rs"

[dependencies]
leviathan-core = { path = "../leviathan-core" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
