[package]
name = "leviathan-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types, errors, and traits for the Leviathan platform"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

