[package]
name = "leviathan-mesh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Service mesh with mTLS proxy and trace context propagation for Leviathan"

[dependencies]
leviathan-core = { path = "../leviathan-core" }
tokio        = { workspace = true }
tokio-rustls = { workspace = true }
rustls       = { workspace = true }
rcgen        = { workspace = true }
webpki-roots = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
tempfile = { workspace = true }
