[package]
name = "leviathan-raft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Production-grade Raft consensus engine for the Leviathan platform"

[dependencies]
leviathan-core    = { path = "../leviathan-core" }
leviathan-storage = { path = "../leviathan-storage" }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
bincode     = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
rand        = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
