[package]
name = "leviathan-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OCI-compliant container runtime for the Leviathan platform"

[dependencies]
leviathan-core = { path = "../leviathan-core" }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
libc        = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
tempfile = { workspace = true }
